--- a/css/global.css
+++ b/css/global.css
@@ -2,7 +2,7 @@ html, body {
     height: 100%;
 }
 
-.banner {
+.banner_1 {
     padding: 0;
     margin: 0;
     overflow: hidden;
@@ -15,9 +15,42 @@ html, body {
         height: var(--app-height);
     }
 }
+.banner_2 {
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    height: 100vh;
+    /* Background image*/
+    background: url("../assets/images/cover/cover_2.jpg") fixed center no-repeat;
+    background-size: cover;
+    /* Ajusta o height do cover em Mobile */
+    @media not all and (hover: hover) {
+        height: var(--app-height);
+    }
+}
+.banner_3 {
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    height: 100vh;
+    /* Background image*/
+    background: url("../assets/images/cover/cover_3.jpg") fixed center no-repeat;
+    background-size: cover;
+    /* Ajusta o height do cover em Mobile */
+    @media not all and (hover: hover) {
+        height: var(--app-height);
+    }
+}
 
 .sessao-servicos {
     background: url("../assets/images/services/background.jpg") center no-repeat;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
 }
 
 @media only screen and (max-width: 600px) {
